--- a/client/src/App.css
+++ b/client/src/App.css
@@ -3,4 +3,12 @@
   margin: 0 auto;
   padding: 2rem;
   text-align: center;
+  position: relative;
+}
+
+
+.exit-button {
+  position: absolute;
+  top: 10px;
+  right: 10px;
 }
