--- a/client/src/components/LoginForm/LoginForm.module.css
+++ b/client/src/components/LoginForm/LoginForm.module.css
@@ -8,7 +8,7 @@
   @media screen and (min-width: 768px) {
     flex-direction: column;
     justify-content: center;
-    background-image: url("https://cdn.pixabay.com/photo/2020/01/06/16/20/abstract-4745656_1280.jpg");
+    background-image: url("../../images/background.jpg");
     background-repeat: no-repeat;
     background-size: cover;
   }
@@ -16,7 +16,7 @@
     flex-direction: row;
     align-items: self-end;
     justify-content: space-around;
-    background-image: url("https://cdn.pixabay.com/photo/2020/01/06/16/20/abstract-4745656_1280.jpg");
+    background-image: url("../../images/background.jpg");
     background-repeat: no-repeat;
     background-size: cover;
   }
@@ -49,15 +49,22 @@
 }
 
 .finance {
-  @media screen and (min-width: 768px) {
+  @media screen and (min-width: 320px) and (max-width: 767px) {
     display: none;
+  }
+  @media screen and (min-width: 768px) {
+    display: flex;
+    font-family: var(--font-primary);
+    align-items: center;
+    justify-content: center;
   }
   @media screen and (min-width: 1280px) {
     display: flex;
     font-family: var(--font-primary);
     align-items: center;
     justify-content: space-between;
-    padding-bottom: 77px;
+    margin: 0 auto;
+    margin-bottom: 30px;
   }
 }
 
@@ -77,21 +84,22 @@
 }
 
 .titleImage {
-  display: flex;
   @media screen and (min-width: 320px) and (max-width: 767px) {
     display: none;
   }
   @media screen and (min-width: 768px) {
+    display: flex;
     flex-direction: row;
     flex-wrap: wrap;
     gap: 40px;
     align-items: center;
     justify-content: center;
     margin-top: 60px;
+    margin-bottom: 50px;
   }
   @media screen and (min-width: 1280px) {
+    display: flex;
     flex-direction: column;
-    padding-top: 150px;
   }
 }
 
@@ -115,6 +123,9 @@
   margin-bottom: 60px;
   @media screen and (min-width: 320px) and (max-width: 767px) {
     margin-top: 113px;
+  }
+  @media screen and (min-width: 1280px) {
+    margin-bottom: 30px;
   }
 }
 
