--- a/client/src/components/RegistrationForm/RegistrationForm.module.css
+++ b/client/src/components/RegistrationForm/RegistrationForm.module.css
@@ -8,15 +8,15 @@
   @media screen and (min-width: 768px) {
     flex-direction: column;
     justify-content: center;
-    background-image: url("https://cdn.pixabay.com/photo/2020/01/06/16/20/abstract-4745656_1280.jpg");
+    background-image: url("../../images/background.jpg");
     background-repeat: no-repeat;
     background-size: cover;
   }
   @media screen and (min-width: 1280px) {
     flex-direction: row;
     align-items: self-end;
-    justify-content: space-around;
-    background-image: url("https://cdn.pixabay.com/photo/2020/01/06/16/20/abstract-4745656_1280.jpg");
+    justify-content: space-between;
+    background-image: url("../../images/background.jpg");
     background-repeat: no-repeat;
     background-size: cover;
   }
@@ -27,29 +27,36 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  margin: auto;
+
   border-radius: var(--radius-modal-tablet-desktop);
   border: 1px solid var(--color-border-bottom-btn-form);
   background-color: var(--color-bg-secondary);
   @media screen and (min-width: 320px) and (max-width: 767px) {
     width: 320px;
     height: 568px;
+    margin: auto;
     padding-top: 32px;
   }
   @media screen and (min-width: 768px) {
     width: 533px;
     height: 616px;
+    margin: auto;
     margin-bottom: 48px;
   }
   @media screen and (min-width: 1280px) {
     width: 533px;
     height: 616px;
+    margin-right: 91px;
     margin-bottom: 52px;
     margin-top: 52px;
   }
 }
 
 .finance {
+  display: flex;
+  @media screen and (min-width: 320px) and (max-width: 767px) {
+    display: none;
+  }
   @media screen and (min-width: 768px) {
     display: flex;
     font-family: var(--font-primary);
@@ -60,8 +67,9 @@
     display: flex;
     font-family: var(--font-primary);
     align-items: center;
-    justify-content: space-between;
-    padding-bottom: 77px;
+    justify-content: flex-start;
+    margin: 0 auto;
+    margin-bottom: 50px;
   }
 }
 
@@ -76,26 +84,29 @@
   @media screen and (min-width: 1280px) {
     width: 452.1px;
     height: 412.6px;
-    margin-left: 66px;
+    margin-left: 76px;
   }
 }
 
 .titleImage {
-  display: flex;
   @media screen and (min-width: 320px) and (max-width: 767px) {
     display: none;
   }
   @media screen and (min-width: 768px) {
+    display: flex;
     flex-direction: row;
     flex-wrap: wrap;
     gap: 40px;
     align-items: center;
     justify-content: center;
     margin-top: 60px;
-    margin-left: 114px;
+    margin-bottom: 50px;
   }
   @media screen and (min-width: 1280px) {
+    display: flex;
     flex-direction: column;
+    align-items: center;
+    justify-content: center;
   }
 }
 
