--- a/client/src/components/LoginForm/LoginForm.module.css
+++ b/client/src/components/LoginForm/LoginForm.module.css
@@ -8,17 +8,33 @@
   @media screen and (min-width: 768px) {
     flex-direction: column;
     justify-content: center;
-    background-image: url("../../images/background.jpg");
+    background-image: url("../../src/assets/images/bg-tablet/ellipse-up.png"),
+      url("../../assets/images/bg-tablet/ellipse-down@2x.png"),
+      url("../../assets/images/bg-tablet/ellipse-up.png"),
+      url("../../assets/images/bg-tablet/ellipse-up@2x.png");
+    background-position: left bottom, left bottom, right top, right top, 0 0;
     background-repeat: no-repeat;
-    background-size: cover;
+    background-size: 50% 50%;
+    background-color: #e5e5e5;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.8);
+    backdrop-filter: blur(10px);
+    background-blend-mode: lighten;
   }
   @media screen and (min-width: 1280px) {
     flex-direction: row;
     align-items: self-end;
     justify-content: space-around;
-    background-image: url("../../images/background.jpg");
+    background-image: url("../../assets/images/bg-desktop/ellipse.png"),
+      url("../../assets/images/bg-desktop/ellipse@2x.png"),
+      url("../../assets/images/bg-desktop/ellipse-up-desktop.png"),
+      url("../../assets/images/bg-desktop/ellipse-up-desktop@2x.png");
+    background-position: left bottom, left bottom, right top, right top, 0 0;
     background-repeat: no-repeat;
-    background-size: cover;
+    background-size: 50% 50%;
+    background-color: #e5e5e5;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.8);
+    backdrop-filter: blur(10px);
+    background-blend-mode: lighten;
   }
 }
 
@@ -46,6 +62,20 @@
     height: 468px;
     margin-bottom: 116px;
   }
+}
+
+.appTitle {
+  display: flex;
+  flex-direction: row;
+  gap: 20px;
+}
+
+.icon {
+  position: absolute;
+  left: 20px;
+  top: 50%;
+  transform: translateY(-50%);
+  pointer-events: none;
 }
 
 .finance {
@@ -105,6 +135,9 @@
 
 .label {
   margin-bottom: 10px;
+  @media screen and (min-width: 1280px) {
+    position: relative;
+  }
 }
 
 .field {
@@ -112,20 +145,27 @@
   height: 40px;
   border-radius: 5px;
   margin: 10px;
+  text-align: center;
   color: var(--color-border-details-separator);
   @media screen and (min-width: 320px) and (max-width: 767px) {
-    max-width: 250px;
+    position: absolute;
+    left: 20px;
+    top: 50%;
+    transform: translateY(-50%);
+    pointer-events: none;
   }
 }
 
 .title {
   font-family: var(--font-primary-bold);
   margin-bottom: 60px;
+  text-shadow: 5px -1px 6px rgba(66, 68, 90, 1);
   @media screen and (min-width: 320px) and (max-width: 767px) {
     margin-top: 113px;
   }
   @media screen and (min-width: 1280px) {
-    margin-bottom: 30px;
+    margin-bottom: 20px;
+    font-weight: 800;
   }
 }
 
