--- a/client/src/components/DiagramTab/DiagramTab.module.css
+++ b/client/src/components/DiagramTab/DiagramTab.module.css
@@ -6,23 +6,18 @@
   box-sizing: border-box;
 }
 
-.title {
-  font-size: 24px;
-  margin-bottom: 10px;
-}
-
-
-
-
-
 .tableArea {
   width: 100%;
 }
 
 .tableHeader {
   display: grid;
-  grid-template-columns: auto 1fr;
+  grid-template-columns: 1fr auto;
   gap: 8px;
+}
+
+.headerSumColumn {
+  text-align: right;
 }
 
 .tableBody {
@@ -35,6 +30,17 @@
   align-items: center;
   justify-content: space-between;
   gap: 8px;
+  position: relative;
+  
+  &:not(:last-child)::after {
+    content: "";
+    position: absolute;
+    width: calc(100% - 16px); 
+    height: 1px;
+    background-color: rgba(0, 0, 0, 0.1); 
+    bottom: 0;
+    left: 8px;
+  }
 }
 
 .categoryColorSquare {
@@ -59,13 +65,23 @@
   margin-top: 10px;
 }
 
+.separatorLine {
+  position: absolute;
+  width: 100%;
+  height: 1px;
+  background-color: rgba(0, 0, 0, 0.2);
+  top: 50%;
+  transform: translateY(-50%);
+}
+
 .onFilterChange {
-  background-color: #e6f7ff; 
+  background-color: rgba(255, 255, 255, 0);
 }
 
 .onDateChange {
-  background-color: #ffe6e6; 
+  background-color: rgba(255, 255, 255, 0);
 }
 
-
-
+.totalSumColumn {
+  justify-self: end;
+}
