added favicons using Material UI and display correctly

--- a/client/src/components/LoginForm/LoginForm.module.css
+++ b/client/src/components/LoginForm/LoginForm.module.css
@@ -72,10 +72,9 @@
 
 .icon {
   position: absolute;
+  top: 22px;
   left: 20px;
-  top: 50%;
-  transform: translateY(-50%);
-  pointer-events: none;
+  color: #e0e0e0;
 }
 
 .finance {
@@ -134,9 +133,9 @@
 }
 
 .label {
-  margin-bottom: 10px;
   @media screen and (min-width: 1280px) {
     position: relative;
+    margin-bottom: 10px;
   }
 }
 
