--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,6 +1,13 @@
 #root {
+ 
   max-width: 1280px;
   margin: 0 auto;
   padding: 2rem;
   text-align: center;
+}
+.container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between; 
+  align-items: center; 
 }
