--- a/client/src/components/RegistrationForm/RegistrationForm.module.css
+++ b/client/src/components/RegistrationForm/RegistrationForm.module.css
@@ -75,10 +75,22 @@
 }
 
 .icon {
-  position: absolute;
-  top: 22px;
-  left: 20px;
   color: #e0e0e0;
+  @media screen and (min-width: 320px) and (max-width: 767px) {
+    position: absolute;
+    top: 22px;
+    left: 20px;
+  }
+  @media screen and (min-width: 768px) {
+    position: absolute;
+    top: 22px;
+    left: 20px;
+  }
+  @media screen and (min-width: 1280px) {
+    position: absolute;
+    top: 22px;
+    left: 20px;
+  }
 }
 
 .finance {
@@ -140,10 +152,8 @@
 }
 
 .label {
+  position: relative;
   margin-bottom: 10px;
-  @media screen and (min-width: 1280px) {
-    position: relative;
-  }
 }
 
 .field {
@@ -161,6 +171,9 @@
 .title {
   font-family: var(--font-primary-bold);
   text-shadow: 5px -1px 6px rgba(66, 68, 90, 1);
+  @media screen and (min-width: 768px) {
+    margin-bottom: 18px;
+  }
 }
 
 .formField {
