--- a/client/src/components/Balance/Balance.module.css
+++ b/client/src/components/Balance/Balance.module.css
@@ -7,7 +7,9 @@
   padding-right: 180px;
   padding-bottom: 11px;
   padding-left: 40px;
+  margin-bottom: 10px;
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+
 }
 
 .wrapper {
