--- a/client/src/components/Chart/ChartWrapper.module.css
+++ b/client/src/components/Chart/ChartWrapper.module.css
@@ -1,7 +1,9 @@
 .chartWrapper {
   display: flex;
   flex-wrap: wrap;
+  min-width: 300px;
   max-width: 800px;
+  width: 100%;
   margin: 0 auto;
   border: 1px solid #ccc;
   border-radius: 5px;
